# EngineeringProjects

./: README.md
Ai&ImageTransferFromRaspBerryPi/GCP_Pi_server_instance/: README.md  ai.py  app.py  private_ws.py  pyproject.toml
Ai&ImageTransferFromRaspBerryPi/GCP_Pi_server_instance/orian_sockets/: client_cv.py  client_image_sender.py  server.py  server_image_receiver.py
Ai&ImageTransferFromRaspBerryPi/GCP_Pi_server_instance/templates/: index.html
Ai&ImageTransferFromRaspBerryPi/GCP_Pi_server_instance/tests/: test_app.py
Ai&ImageTransferFromRaspBerryPi/Raspberry-Pi_Client/: .gitignore  I2C_LCD_driver.py  README.md  client.py  lcd.py  pyproject.toml  requirements.txt  test_lcd.py  wpa_supplicant.conf  wpa_supplicant.conf.linksys
