[tool.poetry]
name = "tayebwa-server"
version = "0.1.0"
description = "final year project quart server"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "tayebwa_server"}]

[tool.poetry.dependencies]
python = "^3.9"
quart = "^0.18.4"
pillow = "^9.5.0"
opencv-python = "^4.7.0.72"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"
websockets = "^11.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
