[tool.poetry]
name = "tayebwa-server"
version = "0.1.0"
description = "final year project pi client"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "tayebwa-pi-client"}]

[tool.poetry.dependencies]
python = "^3.9"
opencv-python = "^4.7.0.72"
websockets = "^11.0.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
